mojmaps are here now. every (java) warning is gone. we use the right loggers now.